feat(managers):     1. replaced hashmaps by concurrent     2. added synchronized access     3. fixed thread safety in role methods