@@ -4,12 +4,12 @@ import com.example.entity.Permission;
 import com.example.entity.Role;
 import com.example.filters.RoleFilter;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
 
 public class RoleManager implements Repository<Role> {
 
-    private final Map<String, Role> rolesById = new HashMap<>();
-    private final Map<String, Role> rolesByName = new HashMap<>();
+    private final Map<String, Role> rolesById = new ConcurrentHashMap<>();
+    private final Map<String, Role> rolesByName = new ConcurrentHashMap<>();
 
     // нужен для проверки назначений при удалении
     private final AssignmentManager assignmentManager;
@@ -19,7 +19,7 @@ public class RoleManager implements Repository<Role> {
     }
 
     @Override
-    public void add(Role role) {
+    public synchronized void add(Role role) {
         if (role == null) throw new IllegalArgumentException("Role cannot be null");
         if (exists(role.getName())) {
             throw new IllegalArgumentException("Role with name " + role.getName() + " already exists");
@@ -29,7 +29,7 @@ public class RoleManager implements Repository<Role> {
     }
 
     @Override
-    public boolean remove(Role role) {
+    public synchronized boolean remove(Role role) {
         if (role == null || !rolesById.containsKey(role.getId())) return false;
 
         if (assignmentManager != null && assignmentManager.hasAssignmentsForRole(role)) {
@@ -61,7 +61,7 @@ public class RoleManager implements Repository<Role> {
     }
 
     @Override
-    public void clear() {
+    public synchronized void clear() {
         rolesById.clear();
         rolesByName.clear();
     }
@@ -85,19 +85,19 @@ public class RoleManager implements Repository<Role> {
     public List<Role> findRolesWithPermission(String permissionName, String resource) {
         return rolesById.values().stream()
                 .filter(role -> role.hasPermission(permissionName, resource)) //
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Role> findByFilter(RoleFilter filter) {
         return rolesById.values().stream()
                 .filter(filter::test)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Role> findAll(RoleFilter filter, Comparator<Role> sorter) {
         return rolesById.values().stream()
                 .filter(filter::test)
                 .sorted(sorter)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
